--- a/src/app/global/navbar/navbar.component.html
+++ b/src/app/global/navbar/navbar.component.html
@@ -2,7 +2,8 @@
   <div class="col-lg-8" [ngStyle]="{ float: 'none', margin: 'auto' }">
 <nav class="navbar navbar-light light contenData">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/historial">Mi Banco </a>
+    <a class="navbar-brand" href="#"> <img src="../../../assets/check.jpg" alt="" width="100" height="100"> </a>
+
     <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button> -->
