--- a/src/app/transactions/pages/payees/payee.component.html
+++ b/src/app/transactions/pages/payees/payee.component.html
@@ -19,7 +19,7 @@
             <input
               type="text"
               class="form-control"
-              placeholder="Rut"
+              placeholder="Ej: 11111111-1"
               formControlName="rut"
       
             />
@@ -79,7 +79,7 @@
               <input 
                 type="text" 
                 class="form-control" 
-                placeholder="Telefono" 
+                placeholder="ej: 63657013" 
                 formControlName="phone"
               />
             </div> 
